# applause

./: .gitignore  CMakeLists.txt  README.md
applause/core/: Extension.h  ModMatrix.cpp  ModMatrix.h  PluginBase.h  ProcessContext.h  ProcessInfo.h
applause/dsp/: BufferView.h  Note.h  SimdSynth.cpp  SimdSynth.h  Synthesizer.cpp  Synthesizer.h
applause/dsp/filters/: StateVariableFilter.h
applause/dsp/modulation/: MSEGCurve.h  MSEGModulator.cpp  MSEGModulator.h
applause/extensions/: AudioPortsExtension.cpp  AudioPortsExtension.h  GUIExtension.cpp  GUIExtension.h  NotePortsExtension.cpp  NotePortsExtension.h  ParamsExtension.cpp  ParamsExtension.h  StateExtension.cpp  StateExtension.h  ThreadPoolExtension.cpp  ThreadPoolExtension.h
applause/ui/: ApplauseEditor.cpp  ApplauseEditor.h  ApplauseUI.h  GenericParameterUIEditor.cpp  GenericParameterUIEditor.h  IEditor.h  NativePopupMenu.h  NativePopupMenu.mm  Tooltip.cpp  Tooltip.h
applause/ui/components/: ApplauseButton.cpp  ApplauseButton.h  Button.cpp  Button.h  GenericParameterUI.cpp  GenericParameterUI.h  Knob.cpp  Knob.h  ModMatrixComponent.cpp  ModMatrixComponent.h  Panel.cpp  Panel.h  ParamKnob.cpp  ParamKnob.h  ParamSlider.cpp  ParamSlider.h  ParamValueTextBox.cpp  ParamValueTextBox.h  Slider.cpp  Slider.h  TextEditor.cpp  TextEditor.h
applause/ui/components/modulation/: MSEGDisplay.cpp  MSEGDisplay.h  ModMatrixComponent.cpp  ModMatrixComponent.h
applause/util/: AudioBuffer.h  DebugHelpers.h  Json.h  MemoryArena.h  ParamMessageQueue.h  SampleType.h  ValueScaling.h
applause/util/inspector/: CollapsibleTreeView.cpp  CollapsibleTreeView.h  FrameUtil.cpp  FrameUtil.h  InspectorPropertiesView.cpp  InspectorPropertiesView.h  InspectorThemeView.cpp  InspectorThemeView.h  InspectorTreeView.cpp  InspectorTreeView.h  InspectorWindow.cpp  InspectorWindow.h  PickCaptureFrame.cpp  PickCaptureFrame.h  SelectionHighlightFrame.cpp  SelectionHighlightFrame.h
cmake/: ApplausePlugin.cmake
examples/: CMakeLists.txt
examples/ApplauseExample/: CMakeLists.txt  README.md
examples/ApplauseExample/src/: ApplauseExample.cpp  ApplauseExample.h  ApplauseExampleEntry.cpp  ApplauseExamplePlugin.cpp  ApplauseExamplePlugin.h  ApplauseExamplePluginEntry.cpp
examples/ApplauseExampleCMakeAPI/: CMakeLists.txt  README.md
examples/ApplauseExampleCMakeAPI/src/: ApplauseExampleEditor.cpp  ApplauseExampleEditor.h
examples/ClapPluginEntryExamplePlugin/: README.md
examples/ExampleFilter/: CMakeLists.txt
examples/ExampleFilter/src/: ExampleFilterEditor.cpp  ExampleFilterEditor.h  ExampleFilterPlugin.cpp  ExampleFilterPlugin.h
examples/ExampleGenericParameterUI/: CMakeLists.txt
examples/ExampleGenericParameterUI/src/: ExampleGenericParameterUIPlugin.cpp  ExampleGenericParameterUIPlugin.h
examples/ExampleMIDIPrinter/: CMakeLists.txt
examples/ExampleMIDIPrinter/src/: ExampleMIDIPrinterPlugin.cpp  ExampleMIDIPrinterPlugin.h
examples/ExampleManualPluginEntry/: CMakeLists.txt  README.md
examples/ExampleManualPluginEntry/src/: ExampleManualPluginEntryEditor.cpp  ExampleManualPluginEntryEditor.h  ExampleManualPluginEntryPlugin.cpp  ExampleManualPluginEntryPlugin.h  ExampleManualPluginEntryPluginEntry.cpp
examples/ExampleNoiseGenerator/: CMakeLists.txt
examples/ExampleNoiseGenerator/src/: ExampleNoiseGeneratorPlugin.cpp  ExampleNoiseGeneratorPlugin.h
examples/ExampleShowcase/: CMakeLists.txt  README.md
examples/ExampleShowcase/src/: ExampleShowcaseEditor.cpp  ExampleShowcaseEditor.h  ExampleShowcasePlugin.cpp  ExampleShowcasePlugin.h
examples/ExampleSineWaveSynth/: CMakeLists.txt
examples/ExampleSineWaveSynth/src/: ExampleSineWaveSynthPlugin.cpp  ExampleSineWaveSynthPlugin.h
src/core/: Extension.h  PluginBase.h
src/extensions/: AudioPortsExtension.cpp  AudioPortsExtension.h  GUIExtension.cpp  GUIExtension.h  NotePortsExtension.cpp  NotePortsExtension.h  ParamsExtension.cpp  ParamsExtension.h  StateExtension.cpp  StateExtension.h
src/ui/: ApplauseEditor.cpp  ApplauseEditor.h  Editor.cpp  Editor.h  GenericParameterUIEditor.cpp  GenericParameterUIEditor.h  IEditor.h
src/ui/components/: ApplauseButton.cpp  ApplauseButton.h  GenericParameterUI.cpp  GenericParameterUI.h  Knob.cpp  Knob.h  ParamKnob.cpp  ParamKnob.h  ParamSlider.cpp  ParamSlider.h  ParamValueTextBox.cpp  ParamValueTextBox.h  Slider.cpp  Slider.h
src/util/: DebugHelpers.h  ParamMessageQueue.h
tests/: CMakeLists.txt
tests/core/: ModMatrixTest.cpp
tests/dsp/: BufferViewTest.cpp  MSEGTest.cpp
tests/extensions/: ParamsExtensionTest.cpp
tests/util/: MemoryArenaTest.cpp
